--- a/snippets/permutation/잘못된 코드/잘못된 코드.md
+++ b/snippets/permutation/잘못된 코드/잘못된 코드.md
@@ -1,3 +1,25 @@
 ![잘못된 코드](../../../images/permutation-잘못된%20코드.png)
 
-코드를 보면 depth 를 받고 있음 이는 틀린 코드
+```js
+[
+  [ 1, 2 ],  [ 1, 3 ],  [ 1, 4 ],  [ 1, 5 ],  [ 1, 6 ],
+  [ 1, 7 ],  [ 1, 8 ],  [ 1, 9 ],  [ 1, 10 ], [ 2, 2 ],
+  [ 2, 3 ],  [ 2, 4 ],  [ 2, 5 ],  [ 2, 6 ],  [ 2, 7 ],
+  [ 2, 8 ],  [ 2, 9 ],  [ 2, 10 ], [ 3, 2 ],  [ 3, 3 ],
+  [ 3, 4 ],  [ 3, 5 ],  [ 3, 6 ],  [ 3, 7 ],  [ 3, 8 ],
+  [ 3, 9 ],  [ 3, 10 ], [ 4, 2 ],  [ 4, 3 ],  [ 4, 4 ],
+  [ 4, 5 ],  [ 4, 6 ],  [ 4, 7 ],  [ 4, 8 ],  [ 4, 9 ],
+  [ 4, 10 ], [ 5, 2 ],  [ 5, 3 ],  [ 5, 4 ],  [ 5, 5 ],
+  [ 5, 6 ],  [ 5, 7 ],  [ 5, 8 ],  [ 5, 9 ],  [ 5, 10 ],
+  [ 6, 2 ],  [ 6, 3 ],  [ 6, 4 ],  [ 6, 5 ],  [ 6, 6 ],
+  [ 6, 7 ],  [ 6, 8 ],  [ 6, 9 ],  [ 6, 10 ], [ 7, 2 ],
+  [ 7, 3 ],  [ 7, 4 ],  [ 7, 5 ],  [ 7, 6 ],  [ 7, 7 ],
+  [ 7, 8 ],  [ 7, 9 ],  [ 7, 10 ], [ 8, 2 ],  [ 8, 3 ],
+  [ 8, 4 ],  [ 8, 5 ],  [ 8, 6 ],  [ 8, 7 ],  [ 8, 8 ],
+  [ 8, 9 ],  [ 8, 10 ], [ 9, 2 ],  [ 9, 3 ],  [ 9, 4 ],
+  [ 9, 5 ],  [ 9, 6 ],  [ 9, 7 ],  [ 9, 8 ],  [ 9, 9 ],
+  [ 9, 10 ], [ 10, 2 ], [ 10, 3 ], [ 10, 4 ], [ 10, 5 ],
+  [ 10, 6 ], [ 10, 7 ], [ 10, 8 ], [ 10, 9 ], [ 10, 10 ]
+]
+```
+원치 않는 결과가 나옴 => i가 아니라 depth 를 받고 있음.
